--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "seed:dev" : "nodemon ./db/seed.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js", 
+    "start:dev": "nodemon index.js" 
   },
   "keywords": [],
   "author": "",
